# economic_indicator_finder

./: Cargo.toml  README.md
asset/: indicators.json
examples/: finder.rs  slow_finder.rs
speech/: korea_bank.txt  powell.txt  putin.txt  saudi.txt  speech.json
src/: finder.rs  indicator.rs  lib.rs  main.rs  prelude.rs  speech.rs  util.rs
