[package]
name = "economic_indicator_finder"
version = "0.1.0"
edition = "2021"
authors = ["Seongsu Park <56729421+seongs1024@users.noreply.github.com>"]
description = """
  A finder for extracting economic indicators from paragraphs
"""
readme = "README.md"
repository = "https://github.com/seongs1024/economic_indicator_finder"
license = "MIT"
keywords = ["economics", "economic-indicator", "text-processing"]
categories = ["text-processing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
