[package]
name = "economic_indicator_finder"
version = "0.1.1"
edition = "2021"
authors = ["Seongsu Park <56729421+seongs1024@users.noreply.github.com>"]
description = """
  A finder for extracting economic indicators from paragraphs
"""
readme = "README.md"
repository = "https://github.com/seongs1024/economic_indicator_finder"
license = "MIT"
keywords = ["economics", "economic-indicator", "text-processing"]
categories = ["text-processing"]
documentation = "https://docs.rs/economic_indicator_finder"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
regex = "1.10.2"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"

[features]
default = []
slow_finder = []

[[example]]
name = "slow_finder"
required-features = ["slow_finder"]